[package]
name = "proxyauth"
version = "0.7.7-beta0"
edition = "2024"
authors = ["Vladimir S"]
repository = "https://github.com/ProxyAuth/ProxyAuth"
readme = "README.md"
license = "Apache-2.0"
description = "Proxy Authentication Token"
build = "src/build.rs"
keywords = ["authentification", "proxy", "security", "token", "gateway"]
categories = ["network-programming", "authentication", "api-bindings", "security"]
documentation = "https://proxyauth.app"

include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE"
]

[build]
jobs = 4 # number threads launch for build

[build-dependencies]
rand = "0.8"
rand_chacha = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
actix-rt = "2"
actix-web = "4"
actix-http = "3.9.0"
serde_json = "1"

[dependencies]
actix-web = { version = "4.10.2", features = ["rustls-0_21"] }
reqwest = { version = "0.11", features = ["native-tls", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.140"
base64 = "0.21"
sha2 = "0.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-loki = "0.2.6"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.3"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
actix-governor = "0.8"
quanta = "0.12.5"
hmac = "0.12"
argon2 = "0.5"
nix = "0.26"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
rand_chacha = "0.3"
dashmap = { version = "6.1.0", features = ["serde"] }
once_cell = "1.19"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"
hyper-rustls = "0.24"
rustls = "0.21.10"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
hyper-proxy = "0.9"
rustc-hash = "1"
memchr = "2"
futures-util = "0.3"
bytes = "1.6"
socket2 = "0.5"
blake3 = "1"
http = "1"
fxhash = "0.2"
anyhow = "1.0"
sequoia-openpgp = { version = "2.0", default-features = false, features = ["crypto-openssl"] }
